Version 6.0.0 - 2021-09-10
* Bug fixes (see git logs for details)

Version 5.6.0 - 2020-09-08
* Bug fixes (see git logs for details)

Version 5.2.0 - 2020-07-22
* Bug fixes (see git logs for details)

Version 5.0.0 - 2018-12-28
* Bug fixes (see git logs for details)

Version 4.8.0 - 2018-12-28
* Bug fixes (see git logs for details)

Version 4.6.0 - 2018-12-28
* Bug fixes (see git logs for details)

Version 4.4.0 - 2017-09-19
* Bug fixes (see git logs for details)

Version 4.2.0 - 2017-07-20
* Bug fixes (see git logs for details)

Version 2.4.0 - 2012-05-30
* Update to Tryton 2.4
* Refactor Pay Modes
* Add default date
* Add number sequence

Version 2.2.1 - 2012-05-04
* Bug fixes (see git logs for details)

Version 2.0.1 - 2011-10-05
* Initial release