@@ -1,3 +1,5 @@
+* Improves voucher form
+
 Version 6.0.0 - 2021-09-10
 * Bug fixes (see git logs for details)
 
